<resources>
    <string name="app_name">OLX Clone</string>

    <!-- Screen Main Activity -->
    <string name="app">OLX</string>

    <!-- Screen Login Activity -->
    <string name="txt_login_toolbar_title">Login</string>
    <string name="edit_email_login">Email</string>
    <string name="edit_password_login">Password</string>
    <string name="btn_sign_in_login">Entrar</string>
    <string name="text_login_register">Cadastre-se</string>
    <string name="text_login_recover_password">Esqueceu a senha?</string>

    <!-- Screen Sign Ip Activity -->
    <string name="edit_name">Nome</string>
    <string name="edit_email">Email</string>
    <string name="edit_phone">Telefone</string>
    <string name="edit_password">Senha</string>
    <string name="btn_register">Criar Conta</string>
    <string name="txt_sing_up_toolbar_title">Criar Conta</string>

    <!-- Screen Recovery Account Activity -->
    <string name="txt_recovery_account">Informe seu email cadastrado e você receberá um link para alterar a senha.</string>
    <string name="btn_recovery_password">Recuperar Senha</string>
    <string name="txt_recovery_toolbar_title">Recuperar Conta</string>

    <!-- Menu Bottom Navigation -->
    <string name="menu_home">Home</string>
    <string name="menu_my_ads">Anúncios</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_account">Conta</string>

    <!-- Screen Fragment Account -->
    <string name="fragment_access_account">Acesse sua conta agora!</string>
    <string name="fragment_click">Clique aqui</string>
    <string name="txt_profile_account">Perfil</string>
    <string name="txt_address_account">Endereço</string>
    <string name="txt_regulations_account">Regulamentos</string>
    <string name="txt_help_account">Ajuda</string>

    <!-- Screen Fragment Home -->
    <string name="btn_add_ads">Inserir Anúncio</string>
    <string name="btn_fab">Produtos</string>

    <!-- Screen Activity Address -->
    <string name="txt_address_cep">CEP</string>
    <string name="txt_address_uf">UF</string>
    <string name="edit_address_city">Cidade</string>
    <string name="edit_address_county">Município</string>
    <string name="edit_address_district">Bairro</string>
    <string name="btn_save_address">Salvar</string>
    <string name="toolbar_address">Endereço</string>

    <!-- Screen Activity Profile -->
    <string name="toolbar_profile_title">Perfil</string>

    <!-- Screen Activity Form Ads -->
    <string name="toolbar_form_ads_title">Novo Anuncio</string>
    <string name="btn_save_ads">Salvar</string>
    <string name="btn_form_category">Selecione a categoria</string>
    <string name="txt_form_ads_title">Título</string>
    <string name="txt_form_ads_category">Categoria</string>
    <string name="txt_form_ads_desc">Descrição</string>
    <string name="txt_form_ads_cep">CEP</string>

    <!-- Screen Activity Category -->
    <string name="toolbar_category_title">Categorias</string>
    <string name="item_category">Todas as categorias</string>
    <string name="btn_sheet_camera">Camera</string>
    <string name="btn_sheet_gallery">Galeria</string>
    <string name="btn_sheet_close">Sair</string>

</resources>