<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sheet_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_camera2"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/btn_sheet_camera"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sheet_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_galeria"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/btn_sheet_gallery"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sheet_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_close"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/btn_sheet_close"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>